added checkEnemyMove()